--- a/summer/package.json
+++ b/summer/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/vue-fontawesome": "^0.1.6",
         "vue-router": "^3.0.6"
     }
 }
